[gd_scene load_steps=4 format=3 uid="uid://cjfhwed5p7b6h"]

[ext_resource type="Texture2D" uid="uid://clox863hbl6dx" path="res://Assets/Tiles/Kenney1Bit-Monochrome-Transparent.png" id="1_uybhw"]
[ext_resource type="Script" uid="uid://ddadlgb7n0kn1" path="res://UI/Buttons/ActionButton.gd" id="2_5a242"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hnvq4"]
atlas = ExtResource("1_uybhw")
region = Rect2(544, 336, 16, 16)

[node name="ActionButton" type="Button"]
custom_minimum_size = Vector2(32, 32)
offset_right = 62.0
offset_bottom = 32.0
size_flags_horizontal = 3
text = "ACTION"
icon = SubResource("AtlasTexture_hnvq4")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("2_5a242")

[node name="CooldownBar" type="ProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
fill_mode = 3
show_percentage = false

[connection signal="pressed" from="." to="." method="onPressed"]
